# vclpp

./: .gitignore  INSTALL.rst  Makefile  Makefile.am  README.rst  TAKEAWAY.rst  bootstrap  configure.ac  kcov-wrapper.sh.in  rust.m4  vclpp.rs  vclpp.spec.in
kcov/: wrapper.sh.in
man/: pvcl.7.rst  vclpp.1.rst
src/: bktchk.rs  cli.rs  declobj.rs  hdrarray.rs  reqauth.rs  tok.rs  vclpp.rs  vcltok.rs  vmodalias.rs
tests/: 00-tokenization.vtc  01-hello-world.vtc  02-empty-object.vtc  04-command-line.vtc
vtc/: 00-tokenization.vtc  01-hello-world.vtc  03-complex-object.vtc  04-command-line.vtc  05-syntax-errors.vtc  06-io-errors.vtc  07-extra-coverage.vtc
